add download button to template

--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Hello!</title>
-  </head>
-  <body>
-    <h1>Hello!</h1>
-    <p>Hi from Rust</p>
-  </body>
+    <style>
+        a, a:visited {
+            padding: 0.5rem 1rem;
+            background-color: #eee;
+            border: 1px solid #696969;
+            text-decoration: none;
+            color: black;
+            border-radius: 3px;
+        }
+        a:hover {
+            background-color: #696969;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+<h1>Hello!</h1>
+<p>Hi from Rust</p>
+<a href="/download">Download File</a>
+</body>
 </html>
