--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Hello!</title>
+
     <style>
         a, a:visited {
             padding: 0.5rem 1rem;
@@ -11,16 +14,24 @@
             text-decoration: none;
             color: black;
             border-radius: 3px;
+            box-shadow: 0 0 3px -1px rgba(0, 0, 0, 0.8);
         }
         a:hover {
-            background-color: #696969;
-            color: white;
+            background-color: #999;
+            color: #eee;
+            box-shadow: none;
         }
     </style>
+
 </head>
+
 <body>
+
 <h1>Hello!</h1>
 <p>Hi from Rust</p>
+<br>
 <a href="/download">Download File</a>
+
 </body>
+
 </html>
